@@ -1184,15 +1184,19 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon SELPHY ES3
        Canon SELPHY ES30
        Canon SELPHY ES40
+       Canon SELPHY CP-10
        Canon SELPHY CP-100
        Canon SELPHY CP-200
        Canon SELPHY CP-220
+       Canon SELPHY CP-300
        Canon SELPHY CP-330
        Canon SELPHY CP400
+       Canon SELPHY CP500
        Canon SELPHY CP510
        Canon SELPHY CP600
        Canon SELPHY CP710
        Canon SELPHY CP720
+       Canon SELPHY CP730
        Canon SELPHY CP750
        Canon SELPHY CP760
        Canon SELPHY CP780
